<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="-34dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/logo_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/welcome_name"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="normal"
            android:layout_marginTop="53dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/txtsty_name"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/sch_st"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="50dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="45dp"
                android:paddingRight="15dp"
                android:paddingBottom="40dp"
                android:paddingLeft="15dp">

                <ImageButton
                    android:id="@+id/sch_stm"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/sch_scn"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/sch1_name"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="50dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="45dp"
                android:paddingRight="15dp"
                android:paddingBottom="40dp"
                android:paddingLeft="15dp">

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/sch_man"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/sch2_name"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="45dp"
                android:paddingRight="15dp"
                android:paddingBottom="40dp"
                android:paddingLeft="15dp">

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/sch_tech"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/sch3_name"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="45dp"
                android:paddingRight="15dp"
                android:paddingBottom="40dp"
                android:paddingLeft="15dp">

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/sch_env"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/sch4_name"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </GridLayout>


</LinearLayout>