<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardBackgroundColor="@color/primary">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:gravity="center">

      <ImageButton
          android:id="@+id/btn_back"
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:background="@drawable/left_arrow"
          tools:ignore="ContentDescription" />

      <TextView
          android:id="@+id/detail_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_marginStart="30dp"
          android:layout_marginLeft="30dp"
          android:layout_marginEnd="30dp"
          android:layout_marginRight="30dp"
          android:layout_toStartOf="@+id/home"
          android:layout_toLeftOf="@+id/home"
          android:layout_toEndOf="@+id/btn_back"
          android:layout_toRightOf="@+id/btn_back"
          android:fontFamily="@font/montserrat_medium"
          android:text="@string/int_com"
          android:textColor="@color/white"
          android:textSize="14sp" />

      <ImageButton
          android:id="@+id/home"
          android:layout_width="18dp"
          android:layout_height="18dp"
          android:layout_alignParentTop="true"
          android:layout_alignParentEnd="true"
          android:layout_alignParentRight="true"
          android:background="@drawable/home"
          tools:ignore="ContentDescription" />

    </RelativeLayout>

  </androidx.cardview.widget.CardView>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_gravity="center"
      android:layout_marginTop="60dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="1">

      <androidx.cardview.widget.CardView
          android:id="@+id/cs"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="fill"
          app:cardBackgroundColor="@color/white"
          app:cardElevation="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="36dp">

          <TextView
              android:id="@+id/head"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:textAlignment="center"
              android:fontFamily="@font/montserrat_bold"
              android:text="@string/headline"
              android:textColor="@color/black"
              android:textSize="12sp"
              android:lineHeight="20dp"
              android:layout_marginTop="10dp"/>

          <TextView
              android:id="@+id/sub_head"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="start"
              android:fontFamily="@font/montserrat_medium"
              android:text="@string/sub_headline"
              android:textColor="@color/black"
              android:textSize="12sp"
              android:paddingTop="30dp"
              android:lineHeight="20dp"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

            <TextView
                android:id="@+id/qnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/qnumber"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:textStyle="bold"
                android:paddingTop="30dp"/>

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/question"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:textStyle="bold"
                android:lineHeight="25dp"
                android:layout_marginTop="20dp"/>

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/qnumber"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:textStyle="bold"
                android:paddingTop="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/question"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:textStyle="bold"
                android:lineHeight="25dp"
                android:layout_marginTop="20dp"/>

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/qnumber"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:textStyle="bold"
                android:paddingTop="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/question"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:textStyle="bold"
                android:lineHeight="25dp"
                android:layout_marginTop="20dp"/>

          </LinearLayout>

        </LinearLayout>

      </androidx.cardview.widget.CardView>

    </GridLayout>

  </ScrollView>


</RelativeLayout>