<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/left_arrow"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/department_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_toStartOf="@+id/home"
            android:layout_toLeftOf="@+id/home"
            android:layout_toEndOf="@+id/btn_back"
            android:layout_toRightOf="@+id/btn_back"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/txtsty_name"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/home"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/home"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <GridLayout
        android:id="@+id/grd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="53dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="373dp"
        android:columnCount="2"
        android:rowCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/department_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="fill"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="45dp"
                android:paddingRight="15dp"
                android:paddingBottom="40dp">

                <ImageView
                    android:id="@+id/com_img"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/cs"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/department_name"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/course1_name"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="fill"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="45dp"
                android:paddingRight="15dp"
                android:paddingBottom="40dp">

                <ImageView
                    android:id="@+id/slt_img"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/lab"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/course2_name"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>

</RelativeLayout>